[package]
name = "mensa-stats"
version = "0.1.0"
authors = ["Paul Emmerich <emmericp@net.in.tum.de>"]
edition = "2018"

[dependencies]
clap = "2.33"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tzdata = "0.4" # chrono-tz was too hard/annoying to use when handling unix timestamps during dst change
